css/about-style.css
@import url('https://fonts.googleapis.com/css2?family=Karla:wght@700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Karla:wght@700&family=League+Spartan&display=swap');

body {
    margin: 0;
    padding: 0;
}

.navbar {
    background-color: #ffff;
    z-index: 1000;
    position: fixed; 
    width: 100%; 
}

.navbar-toggle .icon-bar {
    background-color: black;
    width: 22px;
    height: 2px;
}

.navbar-brand {
    padding: 25px;
}

.navbar-brand img {
    height: 40px;
}

.navbar-toggle {
    margin: 25px 15px 25px 0;
}

.navbar-center {
    padding-top: 20px;
}


.navbar-center a {
    color: black !important;
    font-size: 15px;
    font-family: Karla;
}

.navbar-center a:hover {
    transition: .5s;
    color: #ff6d3c!important;
}
     
.navbar-right {
    padding: 20px;
}

.navbar-right a {
    padding: 20px;
}

.navbar-right i {
    font-size: 15px;
    color: black;
}

.navbar-right i:hover {
    transition: .5s;
    color: #ff6d3c;
}


.background-image {
    background-image: url('/images/about-background.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    height: 100vh;
}

.content p {
    color: #ffff;
    font-size: 30px;
}

.content {
    position: absolute;
    width: 50%; 
    margin-top: 20%;
    top: 50px;
    left: 10%;
}

.footer {
    background-color: #1f1f1f;
    padding: 60px 0;
    height: 540px;
    font-family: League Spartan;
}

.footer ul {
    list-style: none;
}


.footer-container {
    max-width: 1300px;
    margin: auto;
}


.footer-row {
    display: flex;
    flex-wrap: wrap;
}

.footer-content {
    width: 30%;
    padding: 0 5%;
}

.footer h4 {
    margin-bottom: 30px;
    font-size: 17px;
    font-weight: bolder;
    color: white;
}

.footer-content li {
    margin-bottom: 20px;
}

.footer-content li, a,p {
    color: white;
    font-size: 17px;
    font-weight: lighter;
}

.footer-content i {
    padding-right: 10px;
    font-size: 20px;
}


.form-group input {
    margin-right: 25px;
    width: 236px;
    height: 38px;
    border-radius: 7px;
    background-color: #d8d8d8;
}

.form-group {
    display:inline-flex;
}

.footer-content button {
    color: black;
    font-size: 17px;
    border: none;
    border-radius: 20px;
    background-color: #ff6d3c;
    width: 98px;
    height: 38px;
}

.footer-content p {
    margin-bottom: 35px;
}


@media(max-width: 1154px) {
    .footer-content {
        width: 50%;
    }
}

